<resources>
    <string name="app_name">AppCelular</string>
    <string name="Numbers">Numbers</string>
    <string name="_012345678"></string>
    <string name="_012345678blue"></string>
    <string name="c">C</string>
    <string name="apagar"><![CDATA[<]]></string>
    <string name="divisao">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="virgula">,</string>
    <string name="igual">=</string>
</resources>